shiela_style.css
:root {
    --color1: #d7e3d4;
    --color2: #ABC5AD;
    --color3: #d1dce2;
    --color4: #f5b994;
    --color5: #ee9c6c;
    --backgroundColor: white;

}
a {
    color: #f5b994;
}
body, html {
    height: 100%;
    padding: 0;
    margin: 0;
}

footer {
    background-color: var(--color2);
    text-align: center;
    font-family: 'Lexend Deca', sans-serif;
    font-size: large;
    color: var(--backgroundColor);
}

/* Creates parallax effect for 'about me' page */
.my_parallax {
    /* background-color: var(--color2); */
    height: 100%;
    

    background-attachment: fixed;
    background-image: url("hero.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

}

.floatingTextParagraph /* To be placed inside parallax, makes up paragraph */
{
    color: var(--backgroundColor);
    font-size: 145px;
    font-family: 'Lexend Deca', sans-serif;
    font-weight: 700;
    padding-left: 1%;
    padding-right: 1%;
    padding-top: 0%;

}

.floatingTextHeading /* To be placed inside parallax, makes up heading */
{
    padding-top: 7%;
    padding-left: 1%;
    color: var(--backgroundColor);
    font-size: 100px;
    font-family: 'Lexend Deca', sans-serif;
    display:inline-block;
    font-weight: 600;

}

.makeItOrange
{
    color: var(--color5);
}

.myNavBar
{
    background-color: var(--color2);
    overflow: hidden;
    position:fixed;
    width: 100%;
}

.myNavBar a {
    float:left;
    color:var(--backgroundColor);
    text-align: center;
    padding:14px 30px;
    font-size: 30px;
    font-family: 'Lexend Deca', sans-serif;
    font-weight: 400;
    text-decoration: none;
}

.myNavBar a:hover {
    color: var(--color5);
    background-color: var(--backgroundColor);
    outline-color: var(--color2);
    /* outline: solid 2px var(--color4); */
    border: 2px solid var(--color5);
}

.myHeading {
    color: var(--color5) !important;
    font-size: 70px;
    text-align: center;
    font-family: 'Lexend Deca', sans-serif;
    padding-top: 20px;
    
}

.myParagraph {
    color: var(--color2);
    font-family: 'Lexend Deca', sans-serif;
    font-size: 30px;
    text-align: justify;
    padding-left: 200px;
    padding-right: 200px;
    padding-bottom: 200px;
}

.footerLink{
    color: var(--backgroundColor);
    text-decoration: none;
}

.projectContainer{
    display: flex;
    background-color: var(--backgroundColor);
    color: var(--backgroundColor);
    margin: 40px 200px 20px 200px;
    justify-content: space-around;
    align-items: center;
}

.projectItem {
    background-color: var(--color2);
    height: 200px;
    padding: 20px;

}

.projectItem:hover {
    background-color: var(--color4);
}

.resumeText {
    text-align: center;
}

